--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon index.js"
+		"start": "nodemon --watch src src/index.js",
+		"dev": "nodemon --exec node index.js"
+	},
+	"nodemonConfig": {
+		"ignore": [
+			"database/*",
+			"*.log"
+		]
 	},
 	"keywords": [],
 	"author": "",
